--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" />
         <!-- Page Not Found Font 설정 -->
         <link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet" />
+        <!-- Page Font 설정 -->
+        <link
+            href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <noscript>
