--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,11 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" />
         <!-- Page Not Found Font 설정 -->
         <link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet" />
-        <!-- Kakao Map API -->
-        <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=dee958ba270bc4e0a4301bf2e57f39a6&autoload=false"></script>
+        <!-- Page Font 설정 -->
+        <link
+            href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <noscript>
